src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_format_cost_large.snap
---
source: src/commands/run/output.rs
expression: output
---
  Cost:      $99.9900
            $99.9900 claude-opus-4-6
