src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_format_cost_medium.snap
---
source: src/commands/run/output.rs
expression: output
---
  Cost:      $1.2300
            $0.8500 claude-sonnet-4-5
            $0.3800 claude-haiku-4-5
