src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_format_cost_small.snap
---
source: src/commands/run/output.rs
expression: output
---
  Cost:      $0.0001
            $0.0001 claude-sonnet-4-5
