src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_format_cost_three_digit.snap
---
source: src/commands/run/output.rs
expression: output
---
  Cost:      $100.0000
            $100.0000 claude-opus-4-6
