src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_format_cost_very_large.snap
---
source: src/commands/run/output.rs
expression: output
---
  Cost:      $999.9999
            $999.9999 claude-opus-4-6
