src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_format_stats_zero_values.snap
---
source: src/commands/run/output.rs
expression: output
---

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
[v] COMPLETED - Promise found: <promise>done</promise>
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  Iterations: 5
  Time:      0.00s
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
