src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_iteration_header_duration_61s.snap
---
source: src/commands/run/output.rs
expression: output
---

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
▶ Iteration 5 │ Elapsed: 0.0s │ 61s/iter
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
