src/commands/run/snapshots/ralph_wiggum__commands__run__output__tests__snapshot_speed_lines_duration_boundary.snap
---
source: src/commands/run/output.rs
expression: output
---
  Speed:     3 tasks | —
  Avg iter:   60s
